[package]
name = "i_am_alive_today"
version = "0.1.0"
description = "Do you know? I am alive today."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cached = "0.26.2"
getopts = "0.2.21"
openssl = "0.10.38"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
hex = "0.4"
sentry = { version = "0.23.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.2.0"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }

# [profile.release]
# lto = true

[features]
telemetry = ["sentry"]
