[package]
name = "i_am_alive_today"
version = "0.1.1"
description = "Do you know? I am alive today."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cached = "0.26.2"
getopts = "0.2.21"
openssl = { version = "0.10.38" }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
hex = "0.4"
sentry = { version = "0.23.0", features = ["anyhow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.7.0"
url = "2.2.2"
uuid = { version = "0.8", features = ["v4"] }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "70033db"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows", dependencies = ["openssl"] }

[profile.release]
lto = true
incremental = true

[features]
telemetry = []
